# *******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# Versioning is handled by GitHub Releases.
module(name = "score_crates")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_rust", version = "0.68.1-score")

bazel_dep(name = "score_toolchains_rust", version = "0.8.0", dev_dependency = True)
bazel_dep(name = "score_bazel_cpp_toolchains", version = "0.5.1", dev_dependency = True)

# Extensions
gcc = use_extension("@score_bazel_cpp_toolchains//extensions:gcc.bzl", "gcc", dev_dependency = True)
gcc.toolchain(
    name = "score_gcc_x86_64_toolchain",
    target_cpu = "x86_64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_gcc_aarch64_toolchain",
    target_cpu = "aarch64",
    target_os = "linux",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_x86_64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "x86_64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
gcc.toolchain(
    name = "score_qcc_aarch64_toolchain",
    sdp_version = "8.0.0",
    target_cpu = "aarch64",
    target_os = "qnx",
    use_default_package = True,
    version = "12.2.0",
)
use_repo(
    gcc,
    "score_gcc_aarch64_toolchain",
    "score_gcc_x86_64_toolchain",
    "score_qcc_aarch64_toolchain",
    "score_qcc_x86_64_toolchain",
)

# Vendored CXX (dtolnay/cxx) sources. The BUILD overlay wires the crate
# dependencies to this module's own `@crate_index` universe, so consumers only
# need to depend on `@score_crates`.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rust_cxx",
    build_file = "//third_party/cxx:BUILD",
    patch_args = ["-p1"],
    patches = ["//third_party/cxx:cxx_qnx_shared_ptr.patch"],
    sha256 = "3ae90b44cd12c8339c774854745213ca8e17b669e6ad260a03ee2c12afb27739",
    strip_prefix = "cxx-1.0.186",
    urls = ["https://github.com/dtolnay/cxx/archive/refs/tags/1.0.186.tar.gz"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "futures",
    version = "0.3.31",
)
crate.spec(
    package = "libc",
    version = "0.2.186",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.4",
)
crate.spec(
    package = "thiserror",
    version = "2.0.18",
)
crate.spec(
    package = "anyhow",
    version = "1.0.99",
)
crate.spec(
    package = "argh",
    version = "0.1.13",
)
crate.spec(
    package = "async-stream",
    version = "0.3.6",
)
crate.spec(
    package = "bytes",
    version = "1.10.1",
)
crate.spec(
    package = "cc",
    version = "1.2.34",
)
crate.spec(
    package = "codespan-reporting",
    version = "0.12.0",
)
crate.spec(
    package = "console",
    version = "0.16.0",
)
crate.spec(
    package = "env_logger",
    version = "0.11.8",
)
crate.spec(
    package = "equivalent",
    version = "1.0.2",
)
crate.spec(
    package = "foldhash",
    version = "0.2.0",
)
crate.spec(
    package = "hashbrown",
    version = "0.17.1",
)
crate.spec(
    package = "human_bytes",
    version = "0.4.3",
)
crate.spec(
    package = "iceoryx2",
    version = "0.5.0",
)
crate.spec(
    package = "indexmap",
    version = "2.13.0",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-elementary-traits-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-container-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-derive-macros-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.annotation(
    crate = "iceoryx2-bb-derive-macros-qnx8",
    patches = ["//patches:iceoryx2_bb_derive_macros_readme.patch"],
    repositories = ["crate_index"],
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-elementary-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-lock-free-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-memory-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-posix-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)

#iceoryx2 does not yet support QNX8 correctly so we patch
crate.annotation(
    crate = "iceoryx2-pal-posix-qnx8",
    patches = ["//patches:qnx8_iceoryx2.patch"],
    repositories = ["crate_index"],
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-system-types-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-testing-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-bb-threadsafe-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-pal-concurrency-sync-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    git = "https://github.com/qorix-group/iceoryx2.git",
    package = "iceoryx2-cal-qnx8",
    rev = "9f5622f554de48a7a296e1a5a71200b01e35a502",
)
crate.spec(
    package = "indicatif",
    version = "0.18.0",
)
crate.spec(
    package = "sem_safe",
    version = "0.2.1",
)
crate.spec(
    package = "indicatif-log-bridge",
    version = "0.2.3",
)
crate.spec(
    features = ["std"],
    package = "log",
    version = "0.4.27",
)
crate.spec(
    features = ["checkpoint"],
    package = "loom",
    version = "0.7.2",
)
crate.spec(
    features = [
        "net",
        "os-poll",
    ],
    package = "mio",
    version = "1.0.4",
)
crate.spec(
    package = "mockall",
    version = "0.14.0",
)
crate.spec(
    features = [
        "fs",
        "mman",
        "process",
        "signal",
    ],
    package = "nix",
    version = "0.30.1",
)
crate.spec(
    package = "cliclack",
    version = "0.3.8",
)
crate.spec(
    features = ["experimental-derive"],
    package = "postcard",
    version = "1.1.3",
)
crate.spec(
    features = ["span-locations"],
    package = "proc-macro2",
    version = "1.0",
)
crate.spec(
    package = "prost",
    version = "0.14.1",
)
crate.spec(
    package = "prost-build",
    version = "0.14.1",
)
crate.spec(
    package = "prost-types",
    version = "0.14.1",
)
crate.spec(
    package = "tonic",
    version = "0.14.2",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.4.0",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.4.1",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
crate.spec(
    package = "quote",
    version = "1.0",
)
crate.spec(
    package = "rand",
    version = "0.9.2",
)
crate.spec(
    package = "rustversion",
    version = "1.0.22",
)
crate.spec(
    package = "scratch",
    version = "1.0",
)
crate.spec(
    package = "serde",
    version = "1.0.228",
)
crate.spec(
    package = "serde_core",
    version = "1.0.228",
)
crate.spec(
    package = "serde_json",
    version = "1.0.143",
)
crate.spec(
    package = "socket2",
    version = "0.6.0",
)
crate.spec(
    features = ["full"],
    package = "syn",
    version = "2.0",
)
crate.spec(
    features = [
        "formatting",
        "macros",
        "serde",
    ],
    package = "time",
    version = "0.3.41",
)
crate.spec(
    features = [
        "rt",
        "macros",
        "sync",
        "net",
        "time",
        "signal",
        "rt-multi-thread",
    ],
    package = "tokio",
    version = "1.47.1",
)
crate.spec(
    package = "tokio-seqpacket",
    version = "0.8.0",
)
crate.spec(
    features = [
        "codec",
        "net",
    ],
    package = "tokio-util",
    version = "0.7.16",
)
crate.spec(
    default_features = False,
    features = [
        "attributes",
    ],
    package = "tracing",
    version = "0.1.41",
)
crate.spec(
    default_features = False,
    features = [
        "json",
        "smallvec",
        "fmt",
        "ansi",
        "tracing-log",
        "std",
    ],
    package = "tracing-subscriber",
    version = "0.3.19",
)
crate.spec(
    package = "signal-hook",
    version = "0.3.18",
)
crate.spec(
    features = ["termination"],
    package = "ctrlc",
    version = "3.4.4",
)
crate.spec(
    package = "paste",
    version = "1.0.15",
)
crate.spec(
    package = "arrayvec",
    version = "0.7.6",
)
crate.spec(
    package = "ipc-channel",
    version = "0.20.2",
)
crate.spec(
    package = "tinyjson",
    version = "2.5.1",
)
crate.spec(
    package = "adler32",
    version = "1.2.0",
)
crate.spec(
    package = "pico-args",
    version = "0.5.0",
)
crate.spec(
    package = "tempfile",
    version = "3.20.0",
)
crate.spec(
    package = "pastey",
    version = "0.2.3",
)
crate.from_specs(
    name = "crate_index",
    # This shall not be here but rules_rust 0.61.0 or even 0.67.0 does not correct finds out that when we use out platform it shall append
    # aarch64-unknown-nto-qnx710 or best aarch64-unknown-nto00 which is not fully supported in any rust_rules version for now (even if rustc 1.86.0 already supports it)
    supported_platform_triples = [
        "aarch64-unknown-nto-qnx710",  # This enables also QNX8 becasue OS and CPU for platform matches....
        "x86_64-pc-nto-qnx710",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-none",
        "aarch64-unknown-linux-gnu",
    ],
)
use_repo(crate, "crate_index")

# TRLC dependency for requirements traceability
bazel_dep(name = "trlc", version = "3.0.0", dev_dependency = True)

# Lobster dependency for requirements traceability
bazel_dep(name = "lobster", version = "1.0.4", dev_dependency = True)
git_override(
    module_name = "lobster",
    commit = "07382c33f95e22992e0f8788c0537ec06877e51f",
    remote = "https://github.com/bmw-software-engineering/lobster.git",
)

bazel_dep(name = "rules_python", version = "1.8.5", dev_dependency = True)

bazel_dep(name = "score_docs_as_code", version = "4.6.1")
bazel_dep(name = "score_process", version = "2.0.2")
bazel_dep(name = "score_tooling", version = "1.3.1")

register_toolchains(
    "@score_tooling//bazel/rules/rules_score:sphinx_default_toolchain",
    dev_dependency = True,
)
